--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         Meep moop
     </h2>
     <ul>
-        <a href="aaa.md">AAA App Redesign</a>
-        <a href="jlabdesign.md">JupyterLab Design System</a>
-        <a href="21recipes.md">21 Recipes</a>
-        <a href="breakfast.md">Breakfast Kiosk</a>
+        <li><a href="aaa.md">AAA App Redesign</a></li>
+        <li><a href="jlabdesign.md">JupyterLab Design System</a></li>
+        <li><a href="21recipes.md">21 Recipes</a></li>
+        <li><a href="breakfast.md">Breakfast Kiosk</a></li>
     </ul>
     <h2>
         Testing, testing, one, two, three…
     </h2>
-    <a href="about.md">About</a>
-    <a href="contact.md">Contact</a>
+    <li><a href="about.md">About</a></li>
+    <li><a href="contact.md">Contact</a></li>
 </body>
